<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Sign Out"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#3d5afe"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/post_enter"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#3d5afe"
                android:text="@string/post_enter"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/drawing_view"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#3d5afe"
                android:text="DRAWING VIEW"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/logout_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#3d5afe"
                android:text="@string/action_sign_out"
                android:textColor="#ffffff"
                android:textStyle="bold" />



        </LinearLayout>


    </RelativeLayout>


</LinearLayout>